--- a/LeanningCesium/lession06/index.html
+++ b/LeanningCesium/lession06/index.html
@@ -16,9 +16,18 @@
     .cesium-widget-credits{
         display: none !important;
     }
+    #btn{
+        position: absolute;
+        width: 80px;
+        height: 40px;
+        z-index: 999;
+    }
 </style>
 <body>
-    <div id="cesiumcontainer"></div>
+    <div id="cesiumcontainer" >
+        <button onclick="removePoint()" id="btn">清除点线面</button>
+    </div>
+    
 </body>
 <script>
     /*
@@ -72,6 +81,118 @@
     viewer.imageryLayers.add(imageLayer)
 
     // 投影方式 webUTM webmercator,投影出来是一个矩形
+
+    //创建dataSources方便数据管理
+    let dataSource=new Cesium.CustomDataSource('enetiesData');
+    viewer.dataSources.add(dataSource);
+
+
+
+    //添加点
+    dataSource.entities.add({
+        id:"poittest",
+        position:Cesium.Cartesian3.fromDegrees(109,34),
+        point:{
+            pixelSize:10,
+            color:Cesium.Color.YELLOW,
+            outlineColor:Cesium.Color.RED,
+            outlineWidth:2,
+        }
+    });
+
+    //添加点方式2
+    let pointEntity2=new Cesium.Entity({
+        id:'pointtest2',
+        position:Cesium.Cartesian3.fromDegrees(108.5,34),
+        point:{
+            pixelSize:10,
+            color:Cesium.Color.YELLOW,
+            outlineColor:Cesium.Color.RED,
+            outlineWidth:2,
+        }
+    });
+    viewer.entities.add(pointEntity2);
+
+    //添加面
+    let polygonEntity=new Cesium.Entity({
+        id:"polygontest",
+        name:"this_is_a_polygon",
+        polygon:{
+            hierarchy:Cesium.Cartesian3.fromDegreesArray([
+                108.5,34,
+                107.5,34,
+                107.5,36,
+                108.5,36,
+                108.5,34
+            ]),
+            height:100,
+            material:Cesium.Color.RED.withAlpha(0.5),
+            outline:true,
+            outlineColor:Cesium.Color.BLUE,
+            outlineWidth:2,
+            fill:true
+        }
+    });
+    dataSource.entities.add(polygonEntity);
+
+    //添加线
+    let polylineEntity=new Cesium.Entity({
+        id:"polylinetest",
+        name:"boderLine",
+        polyline:{
+            positions:Cesium.Cartesian3.fromDegreesArray([
+                106.5,34,
+                105.5,34,
+                105.5,36,
+                106.5,36,
+                106.5,34,
+            ]),
+            height:100,
+            width:2,
+            material:Cesium.Color.YELLOW
+        }
+    });
+    console.log(polylineEntity);
+    dataSource.entities.add(polylineEntity)
+
+    //怎么移除？
+
+
+    function removePoint(){
+        let tmpPoint=viewer.entities.getById('pointtest2');
+        //方法1移除点
+        viewer.entities.remove(tmpPoint);
+        //方法2移除
+        //viewer.entities.removeById("polylinetest")
+        let tmpPoline=dataSource.entities.getById('polylinetest');
+        dataSource.entities.remove(tmpPoline)
+    }
+    let handler=new Cesium.ScreenSpaceEventHandler(viewer.scene.canvas);
+    handler.setInputAction(function(movement){
+        let ray=this.viewer.camera.getPickRay(movement.position);
+        if(!ray){
+            return null;
+        }
+        let position=this.viewer.scene.globe.pick(ray,this.viewer.scene);
+        console.log(movement.position);
+        console.log(position);
+        let cartographic = Cesium.Ellipsoid.WGS84.cartesianToCartographic(position);
+        console.log(cartographic);
+        let lon = Cesium.Math.toDegrees(cartographic.longitude);    //弧度转经度
+        let lat = Cesium.Math.toDegrees(cartographic.latitude);     //弧度转纬度
+        console.log(lon,lat);
+    },Cesium.ScreenSpaceEventType.LEFT_CLICK);
+
+    viewer.camera.setView({
+        destination:Cesium.Cartesian3.fromDegrees(109,34,1000000),  //相机位置
+        //相机的姿态
+        orientation:{
+            heading:Cesium.Math.toRadians(0.0), //朝向
+            pitch:Cesium.Math.toRadians(-90),
+            roil:0.0
+        },
+        duration:5
+    });
 
 </script>
 </html>
