add the 3D tile production way

--- a/LeanningCesium/lession04/index.html
+++ b/LeanningCesium/lession04/index.html
@@ -16,10 +16,16 @@
     .cesium-widget-credits{
         display: none !important;
     }
+    #ftbtn{
+        position: absolute;
+        width: 120px;
+        height: 40px;
+        z-index: 999;
+    }
 </style>
 <body>
     <div id="cesiumcontainer">
-        <button onclick="flyToBJ" id="ftbtn">FlyToFreeDom</button>
+        <button onclick="flyToBJ" id="ftbtn">飞向响水镇</button>
     </div>
     
 </body>
