--- a/LeanningCesium/lession09/index.html
+++ b/LeanningCesium/lession09/index.html
@@ -72,8 +72,8 @@
     viewer.imageryLayers.add(imageLayer)
 
     viewer.terrainProvider=new Cesium.CesiumTerrainProvider({
-        url:"./cesiumData/terrain"
-
+        //url:"./cesiumData/terrain"
+        url:"./c3d"
     });
 
     //通过经纬度如何获取高程数据
