add the vue project

--- a/LeanningCesium/lession03/index.html
+++ b/LeanningCesium/lession03/index.html
@@ -20,7 +20,8 @@
 <body>
     <div id="cesiumcontainer"></div>
 </body>
-<script>
+<script type="module">
+    
     /*
     //高德遥感影像
     http://webst01.is.autonavi.com/appmaptile?style=6&x={x}&y={y}&z={z}
